# jpeg-compressor

./: CMakeLists.txt  encoder.cpp  jpge.cpp  jpge.h  rgb_to_ycc.cl
